[package]
name = "rfb_2_2024_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bitcoincore-rpc = "0.19.0"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
reqwest = { version = "0.11", features = ["json", "blocking", "socks"] }
